--- a/packages/taiyi-contracts/package.json
+++ b/packages/taiyi-contracts/package.json
@@ -45,6 +45,8 @@
     "base64-sol": "^1.0.1",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.3.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "hardhat": "^2.1.1",
     "hardhat-abi-exporter": "^2.2.1",
     "hardhat-gas-reporter": "^1.0.4",
