--- a/packages/taiyi-contracts/package.json
+++ b/packages/taiyi-contracts/package.json
@@ -37,24 +37,25 @@
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "@typechain/ethers-v5": "^6.0.1",
-    "@types/express": "^4.17.11",
-    "@types/prompt": "^1.1.0",
     "@types/chai": "^4.2.15",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/express": "^4.17.11",
     "@types/fs-extra": "*",
+    "@types/prompt": "^1.1.0",
     "base64-sol": "^1.0.1",
-    "dotenv": "^10.0.0",
-    "ethereum-waffle": "^3.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "dotenv": "^10.0.0",
+    "ethereum-waffle": "^3.3.0",
     "hardhat": "^2.1.1",
     "hardhat-abi-exporter": "^2.2.1",
-    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-change-network": "^0.0.7",
+    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
     "prettier-plugin-solidity": "^1.0.0-beta.12",
     "prompt": "^1.1.0",
     "shx": "^0.3.3",
+    "solmate": "^6.6.1",
     "ts-node": "^10.0.0"
   },
   "dependencies": {
