--- a/packages/taiyi-contracts/package.json
+++ b/packages/taiyi-contracts/package.json
@@ -17,11 +17,14 @@
     "task:accounts": "npx hardhat accounts",
     "task:advance-blocks": "npx hardhat advance-blocks",
     "task:deploy": "npx hardhat deploy",
+    "task:deploy-demo": "npx hardhat deploy-demo",
     "task:populate-descriptor": "npx hardhat populate-descriptor",
     "task:run-local": "npx hardhat run-local",
     "task:grow-actor": "npx hardhat grow-actor",
     "task:new-actor": "npx hardhat new-actor",
     "task:pangu-daoli": "npx hardhat pangu-daoli",
+    "task:run-log": "npx hardhat run-log",
+    "task:advance-timestamp": "npx hardhat advance-timestamp",
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage",
     "prepare": "yarn build"
