初始化须弥域代码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "references": [
         { "path": "packages/taiyi-contracts" },
+        { "path": "packages/taiyi-xumi-contracts" },
     ]
 }
