时间线设置出生起始区域 创建区域时绑定时间线，时间线仅在当前区域时间线匹配的情况下才能动作 增加角色在各时间线跨越时的年龄记录 用例事件去掉城市农村检查和分配 增加通用的跨区域事件基类 测试用例更新 增加须弥回到大荒事件1050001

--- a/packages/taiyi-xumi-contracts/package.json
+++ b/packages/taiyi-xumi-contracts/package.json
@@ -15,6 +15,7 @@
     "build:declarations": "shx cp typechain/*.d.ts dist/typechain",
     "hardhat": "npx hardhat",
     "test": "npx hardhat test",
+    "task:make-utf8": "npx hardhat make-utf8",
     "coverage": "npx hardhat coverage",
     "prepare": "yarn build"
   },
