--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "references": [
         { "path": "packages/taiyi-contracts" },
-        { "path": "packages/taiyi-xumi-contracts" },
+        { "path": "packages/xumi-contracts" },
     ]
 }
