更新部署脚本，增加Arbitrum测试链部署

--- a/packages/xumi-contracts/package.json
+++ b/packages/xumi-contracts/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@taiyi/contracts": "^0.1.0",
+    "@taiyi/dahuang-contracts": "^0.1.0",
     "ethers": "^5.4.7"
   }
 }
