大荒资源生长合约随机初始化修正 合约部署脚本修正，增加浏览器验证脚本 大荒项目中增加一些引用其他太乙项目合约的假合约，用于浏览器验证 太乙721合约中文修正

--- a/packages/taiyi-contracts/package.json
+++ b/packages/taiyi-contracts/package.json
@@ -23,6 +23,7 @@
     "task:advance-timestamp": "npx hardhat advance-timestamp",
     "task:make-utf8": "npx hardhat make-utf8",
     "task:verify-etherscan": "npx hardhat verify-etherscan",
+    "task:verify-etherscan-single": "npx hardhat verify-etherscan-single",
     "flatten": "hardhat flatten ./contracts/${npm_config_name}.sol > ./contracts_flattened/${npm_config_name}.sol",
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage",
