大荒日志机器人修复 增加大荒资源采集任务脚本 事件60505要求角色位置处于当前区域 大荒任务脚本和测试用例更新 太乙社稷图合约开放事件配置数据

--- a/packages/dahuang-contracts/package.json
+++ b/packages/dahuang-contracts/package.json
@@ -21,6 +21,7 @@
     "task:deploy-single": "npx hardhat deploy-single",
     "task:new-actor": "npx hardhat new-actor",
     "task:grow-actor": "npx hardhat grow-actor",
+    "task:collect-assets": "npx hardhat collect-assets",
     "task:run-log": "npx hardhat run-log",
     "task:verify-etherscan-single": "npx hardhat verify-etherscan-single",
     "coverage": "npx hardhat coverage",
