--- a/packages/dahuang-bots/package.json
+++ b/packages/dahuang-bots/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "build": "tsc",
     "start": "nodemon src/index.ts",
-    "format": "prettier 'src/**/*.ts' --write"
+    "format": "prettier 'src/**/*.ts' --write",
+    "task:run-log": "npx hardhat run-log"
   },
   "devDependencies": {
     "@ethersproject/keccak256": "^5.4.0",
@@ -39,6 +40,7 @@
     "prettier": "^2.1.2",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
+    "ethers": "^5.4.6",
     "typescript": "^4.9.4"
   },
   "dependencies": {
@@ -49,7 +51,6 @@
     "discord.js": "^13.3.1",
     "discordx": "^9.0.1",
     "dotenv": "^8.2.0",
-    "ethers": "^5.4.6",
     "graphql": "^15.3.0",
     "graphql-request": "^3.1.0",
     "hardhat-change-network": "^0.0.7",
