接口代码整理，归属于大荒的接口转移到大荒合约项目 大荒增加死亡记录模块，事件10000去掉死亡数据

--- a/packages/dahuang-contracts/tsconfig.json
+++ b/packages/dahuang-contracts/tsconfig.json
@@ -12,6 +12,6 @@
   ],
   "files": ["./hardhat.config.ts"],
   "references": [
-    {"path": "../taiyi-contracts"},
+    {"path": "../taiyi-contracts/tsconfig.build.json"}
   ]
 }
