大荒新增的数据模块的模块序号直接使用数字，不再使用库定义 大荒增加部署脚本 乾天计划升级部署事件10000，新增部署角色死亡记录

--- a/packages/dahuang-contracts/package.json
+++ b/packages/dahuang-contracts/package.json
@@ -19,6 +19,7 @@
     "task:deploy": "npx hardhat deploy",
     "task:deploy-demo": "npx hardhat deploy-demo",
     "task:deploy-single": "npx hardhat deploy-single",
+    "task:deploy-event-processors": "npx hardhat deploy-event-processors",
     "task:new-actor": "npx hardhat new-actor",
     "task:grow-actor": "npx hardhat grow-actor",
     "task:collect-assets": "npx hardhat collect-assets",
