天赋数据模块判断天赋动作的接口不再检查是否初始化天赋 大荒测试案例更新 大荒增加申请姓名任务脚本

--- a/packages/dahuang-contracts/package.json
+++ b/packages/dahuang-contracts/package.json
@@ -20,6 +20,7 @@
     "task:deploy-demo": "npx hardhat deploy-demo",
     "task:deploy-single": "npx hardhat deploy-single",
     "task:deploy-event-processors": "npx hardhat deploy-event-processors",
+    "task:new-name": "npx hardhat new-name",
     "task:new-actor": "npx hardhat new-actor",
     "task:grow-actor": "npx hardhat grow-actor",
     "task:collect-assets": "npx hardhat collect-assets",
