--- a/packages/taiyi-contracts/package.json
+++ b/packages/taiyi-contracts/package.json
@@ -17,6 +17,7 @@
     "task:accounts": "npx hardhat accounts",
     "task:advance-blocks": "npx hardhat advance-blocks",
     "task:deploy": "npx hardhat deploy",
+    "task:deploy-single": "npx hardhat deploy-single",
     "task:populate-descriptor": "npx hardhat populate-descriptor",
     "task:run-local": "npx hardhat run-local",
     "task:pangu-daoli": "npx hardhat pangu-daoli",
@@ -24,6 +25,7 @@
     "task:make-utf8": "npx hardhat make-utf8",
     "task:verify-etherscan": "npx hardhat verify-etherscan",
     "task:verify-etherscan-single": "npx hardhat verify-etherscan-single",
+    "task:do": "npx hardhat do",
     "flatten": "hardhat flatten ./contracts/${npm_config_name}.sol > ./contracts_flattened/${npm_config_name}.sol",
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage",
