太乙协议剧本管理合约修正，支持触发事件带角色参数 大荒60505事件修改，简化对剧情支持，以剧情角色调用剧情事件 大荒剧情事件修改，以剧情角色处理事件，对触发角色单独增加调整属性的接口 大荒机器人更新

--- a/packages/dahuang-contracts/package.json
+++ b/packages/dahuang-contracts/package.json
@@ -28,6 +28,8 @@
     "task:run-log": "npx hardhat run-log",
     "task:verify-etherscan-single": "npx hardhat verify-etherscan-single",
     "task:do": "npx hardhat do",
+    "task:show-actor-history": "npx hardhat show-actor-history",
+    "task:list-actors": "npx hardhat list-actors",
     "coverage": "npx hardhat coverage",
     "prepare": "yarn build"
   },
