--- a/packages/dahuang-contracts/.gitignore
+++ b/packages/dahuang-contracts/.gitignore
@@ -13,5 +13,12 @@ logs
 coverage/
 coverage.json
 
+abi/@openzeppelin
+abi/@taiyi
+abi/contracts/base
+abi/contracts/external
+abi/contracts/proxies
+abi/contracts/test
+
 addresses/hard.json
 addresses/hard_const_args.json
