--- a/packages/taiyi-contracts/.gitignore
+++ b/packages/taiyi-contracts/.gitignore
@@ -13,5 +13,11 @@ logs
 coverage/
 coverage.json
 
+abi/@openzeppelin
+abi/contracts/base
+abi/contracts/external
+abi/contracts/proxies
+abi/contracts/test
+
 addresses/hard.json
 addresses/hard_const_args.json
