--- a/packages/xumi-contracts/.gitignore
+++ b/packages/xumi-contracts/.gitignore
@@ -13,4 +13,11 @@ logs
 coverage/
 coverage.json
 
+abi/@openzeppelin
+abi/@taiyi
+abi/contracts/base
+abi/contracts/external
+abi/contracts/proxies
+abi/contracts/test
+
 addresses/hard.json
