--- a/packages/dahuang-contracts/package.json
+++ b/packages/dahuang-contracts/package.json
@@ -29,6 +29,7 @@
     "task:verify-etherscan-single": "npx hardhat verify-etherscan-single",
     "task:do": "npx hardhat do",
     "task:show-actor-history": "npx hardhat show-actor-history",
+    "task:show-actor-info": "npx hardhat show-actor-info",
     "task:list-actors": "npx hardhat list-actors",
     "coverage": "npx hardhat coverage",
     "prepare": "yarn build"
