add some dev task

--- a/packages/taiyi-contracts/package.json
+++ b/packages/taiyi-contracts/package.json
@@ -14,6 +14,7 @@
     "build:sol": "npx hardhat compile",
     "build:declarations": "shx cp typechain/*.d.ts dist/typechain",
     "hardhat": "npx hardhat",
+    "task:new-account": "npx hardhat new-account",
     "task:accounts": "npx hardhat accounts",
     "task:advance-blocks": "npx hardhat advance-blocks",
     "task:deploy": "npx hardhat deploy",
@@ -23,6 +24,7 @@
     "task:pangu-daoli": "npx hardhat pangu-daoli",
     "task:advance-timestamp": "npx hardhat advance-timestamp",
     "task:make-utf8": "npx hardhat make-utf8",
+    "task:test-hash": "npx hardhat test-hash",
     "task:verify-etherscan": "npx hardhat verify-etherscan",
     "task:verify-etherscan-single": "npx hardhat verify-etherscan-single",
     "task:do": "npx hardhat do",
