- change yarn to pnpm - upgrade ERC20/721 related to support openzeppelin v5.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,5 @@ build/
 .DS_Store
 *.tsbuildinfo
 *.log
-package-lock.json
-yarn.lock
 
-packages/taiyi-contracts/abi
-packages/taiyi-contracts/typechain
-packages/dahuang-contracts/abi
-packages/dahuang-contracts/typechain
-packages/xumi-contracts/abi
-packages/xumi-contracts/typechain
+pnpm-lock.yaml
