--- a/package.json
+++ b/package.json
@@ -2,35 +2,21 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "lerna": "lerna",
-    "build": "lerna run build",
-    "test": "lerna run --parallel test",
-    "clean": "lerna run --parallel clean",
-    "prepare": "lerna run prepare --scope=@taiyi/{contracts,dahuang-contracts,xumi-contracts}",
+    "build": "pnpm recursive run build",
+    "test": "pnpm recursive run test",
+    "prepare": "pnpm --filter @taiyi/contracts --filter @taiyi/dahuang-contracts --filter @taiyi/xumi-contracts prepare",
     "lint": "eslint 'packages/**/*.ts' --fix",
     "format": "prettier --write 'packages/**/*.{ts(x)?,sol,md,css}' '!**/typechain/**'"
   },
   "devDependencies": {
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "@types/chai": "^4.2.15",
-    "chai": "^4.2.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^5.0.9",
-    "lerna": "^3.22.1",
-    "mocha": "^8.4.0",
     "pinst": "^2.1.6",
-    "prettier": "^2.3.0",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "prettier": "^2.3.0"
   },
-  "workspaces": [
-    "packages/*"
-  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -38,8 +24,8 @@
   },
   "lint-staged": {
     "*.{ts,js}": [
-      "yarn lint",
-      "yarn format"
+      "pnpm lint",
+      "pnpm format"
     ]
   }
 }
