--- a/packages/dahuang-bots/package.json
+++ b/packages/dahuang-bots/package.json
@@ -21,27 +21,30 @@
     "task:run-log": "npx hardhat run-log"
   },
   "devDependencies": {
-    "@ethersproject/keccak256": "^5.4.0",
-    "@nomiclabs/buidler": "^1.999.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/wallet": "^5.7.0",
+    "@nomiclabs/buidler": "^1.4.8",
     "@nomiclabs/buidler-ethers": "^2.0.2",
     "@nomiclabs/buidler-waffle": "^2.1.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^7.1.0",
-    "@typechain/hardhat": "^2.3.0",
-    "@types/ioredis": "^4.26.4",
-    "@types/node": "^18.11.18",
-    "@types/tmp": "^0.2.1",
-    "ethereum-waffle": "^3.4.0",
-    "ethereumjs-util": "^7.1.0",
-    "fs-extra": "^10.0.0",
-    "hardhat": "^2.6.4",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.1.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@typechain/ethers-v5": "^10.2.1",
+    "@typechain/hardhat": "^6.0.0",
+    "@types/fs-extra": "*",
+    "@types/node": "^20.9.5",
+    "@types/tmp": "^0.2.6",
+    "ethereum-waffle": "^3.3.0",
+    "ethereumjs-util": "^7.1.5",
+    "ethers": "^5.7.2",
+    "fs-extra": "^11.1.1",
+    "hardhat": "^2.19.1",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
-    "ethers": "^5.4.6",
-    "typescript": "^4.9.4"
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "@discordx/importer": "^1.1.2",
@@ -50,15 +53,15 @@
     "@taiyi/dahuang-contracts": "^0.1.0",
     "discord.js": "^13.3.1",
     "discordx": "^9.0.1",
-    "dotenv": "^8.2.0",
-    "graphql": "^15.3.0",
-    "graphql-request": "^3.1.0",
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "hardhat-change-network": "^0.0.7",
-    "ioredis": "^4.27.6",
+    "ioredis": "^5.3.2",
     "reflect-metadata": "^0.1.13",
-    "sharp": "^0.28.3",
+    "sharp": "^0.32.6",
     "tmp": "^0.2.1",
     "ts-try": "^0.2.0",
-    "twitter-api-v2": "^1.1.1"
+    "twitter-api-v2": "^1.15.2"
   }
 }
