--- a/packages/xumi-contracts/package.json
+++ b/packages/xumi-contracts/package.json
@@ -8,8 +8,8 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
-    "clean": "rimraf dist tsconfig.build.tsbuildinfo",
-    "build": "yarn build:sol && yarn build:ts && yarn build:declarations",
+    "clean": "rimraf abi artifacts cache dist typechain tsconfig.build.tsbuildinfo",
+    "build": "pnpm build:sol && pnpm build:ts && pnpm build:declarations",
     "build:ts": "tsc -p tsconfig.build.json",
     "build:sol": "npx hardhat compile",
     "build:declarations": "shx cp typechain/*.d.ts dist/typechain",
@@ -17,42 +17,58 @@
     "test": "npx hardhat test",
     "task:make-utf8": "npx hardhat make-utf8",
     "coverage": "npx hardhat coverage",
-    "prepare": "yarn build"
+    "prepare": "pnpm build"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
     "@ethersproject/abstract-provider": "*",
+    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/wallet": "^5.7.0",
     "@float-capital/solidity-coverage": "^0.7.17",
+    "@matterlabs/hardhat-zksync-deploy": "^0.6.0",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.12",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.1.0",
-    "@openzeppelin/contracts-upgradeable": "^4.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@openzeppelin/contracts-upgradeable": "^5.0.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
-    "@typechain/ethers-v5": "^6.0.1",
-    "@types/chai": "^4.2.15",
+    "@typechain/ethers-v5": "^10.2.1",
+    "@typechain/hardhat": "^6.0.0",
+    "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.3",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "*",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.9.5",
     "@types/prompt": "^1.1.0",
     "base64-sol": "^1.0.1",
-    "chai": "^4.2.0",
+    "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
+    "chalk": "^5.3.0",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.3.0",
-    "hardhat": "^2.1.1",
-    "hardhat-abi-exporter": "^2.2.1",
+    "hardhat": "^2.19.1",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-change-network": "^0.0.7",
     "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-typechain": "^0.3.5",
+    "js-sha3": "^0.9.2",
+    "mocha": "^10.2.0",
     "prettier-plugin-solidity": "^1.0.0-beta.12",
     "prompt": "^1.1.0",
+    "rimraf": "^5.0.5",
     "shx": "^0.3.3",
     "solmate": "^6.6.1",
-    "ts-node": "^10.9.1"
+    "ts-generator": "^0.1.1",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.3.2",
+    "typescript": "^5.3.2",
+    "web3": "^4.2.2",
+    "zksync-web3": "^0.14.3",
+    "@taiyi/contracts": "^0.1.0",
+    "@taiyi/dahuang-contracts": "^0.1.0"
   },
   "dependencies": {
-    "@taiyi/contracts": "^0.1.0",
-    "@taiyi/dahuang-contracts": "^0.1.0",
-    "ethers": "^5.4.7"
+    "ethers": "^5.7.2"
   }
 }
